[project]
name = "vhs-mod"
description = "Nodes related to video workflows"
version = "1.5.18"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/vindennl48/VHS-Mod"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "vindennl48"
DisplayName = "vhs-mod"
Icon = ""
